<resources>
    <string name="app_name">My Mental Health App</string>
    <string name="textView4">Calendar</string>
    <string name="textView5">Charts</string>
    <string name="textView3">Social</string>
    <string name="textView2">Diary</string>
    <string name="switch1">panic button</string>
    <string name="switch2">Panic Button</string>
    <string name="textView6">Welcome</string>
    <string name="textView7">My Diary</string>
    <string name="title_activity_my_diary">My Diary</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="editText">Write here…</string>
    <string name="section_label">Any additional information goes here</string>
    <string name="button2">save</string>
    <string name="checkBox13">Gloomy</string>
    <string name="checkBox24">Insecure</string>
    <string name="checkbox24">Insecure</string>
    <string name="awkwardCb">Awkward</string>
    <string name="button11">Panic Button</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_search_text">search</string>
    <string name="action_setting_text">Account settings</string>
    <string name="action_logout_btn">Logout</string>
    <string name="setup_name_hint">Your username…</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint">Add Post</string>
    <string name="add_post_btn_hint">Post</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="panicBtn">PANIC BUTTON</string>
    <string name="survey_btn">TAKE SURVAY</string>
    <string name="panic_tv">panic switch</string>
    <string name="negativeTv">panic attack</string>
    <string name="diaryEntryTv">diary entry</string>
    <string name="selectedDateTv">selected date</string>
    <string name="todaysDateTv">todays date</string>
    <string name="task_Label">Enter the severity of your symptoms below:</string>
    <string name="bloatingTv">Bloating</string>
    <string name="crampsTv">Cramps</string>
    <string name="dizzinessTv">Dizziness</string>
    <string name="spotsTv">Spots</string>
    <string name="headachesTv">Headaches</string>
    <string name="insomniaTv">Insomnia</string>
    <string name="sweatingTv">Sweating</string>
    <string name="SubmitBtn">Submit</string>
    <string name="selfReportBtn">self report</string>
    <string name="commentLabel">Comments :</string>
    <string name="comment_field">Your comment here…</string>
    <string name="comment_post_btn">post</string>
    <string name="weeklyReportBtn">Weekly Report</string>
    <string name="monthlyReportBtn">Monthly Report</string>
    <string name="myProgressLbl">My Progress</string>
    <string name="loginTv">Login</string>
    <string name="emailEt">email</string>
    <string name="passwordEt">password</string>
    <string name="attemptsTv">Attempts:</string>
    <string name="loginBtn">Login</string>
    <string name="regBtn">Register</string>
    <string name="oasisTV">Overall Anxiety Severity and Impairment Scale</string>
    <string name="explanationTv">Rate yourself from 1–5 in each scenario over the past week, 5 being most severe</string>
    <string name="question5Txt">How much has anxiety interfered with your social life and relationships?</string>
    <string name="submit">Submit</string>
    <string name="question4Txt">How much did your anxiety interfere with your ability to do the things you needed to do at work, at school, or at home?</string>
    <string name="question3Txt">How often did you avoid situations, places or objects or activities because of anxiety or fear?</string>
    <string name="question2Txt">When you felt anxious, how intense or severe was your anxiety?</string>
    <string name="question1Txt">How often have you felt anxious</string>
    <string name="odsisTV">Overall Depression Severity and Impairment Scale</string>
    <string name="explanationOdsisTv">Rate yourself from 1–5 in each scenario over the past week, 5 being most severe</string>
    <string name="question1OdsisTxt">How often have you felt depressed</string>
    <string name="submitOdsis">Submit</string>
    <string name="question5OdsisTxt">How much has depression interfered with your social life and relationships?</string>
    <string name="question4OdsisTxt">How much did your depression interfere with your ability to do the things you needed to do at work, at school, or at home?</string>
    <string name="question3OdsisTxt">How often did you have difficulty engaging in or being interested in activities you normally enjoy because of depression?</string>
    <string name="question2OdsisTxt">When you felt depressed, how intense or severe was your depression?</string>
    <string name="regTv">Register</string>
    <string name="passEt">password</string>
    <string name="confirmPassEt">confirm password</string>
    <string name="registerBtn">register</string>
    <string name="socialTv">Social</string>
    <string name="forumBtn">FORUM</string>
    <string name="statisticsBtn">STATS</string>
    <string name="comment_username">Username</string>
    <string name="comment_message">Loading Comment</string>
    <string name="post_user_name">username</string>
    <string name="post_date">forum post date</string>
    <string name="post_content">this is a load of random text. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="forum_comment_count">0 Comments</string>
    <string name="typeHere">write here</string>
    <string name="acneTv">Acne</string>
    <string name="task_mood_label">Check the boxes that describe how you felt today:</string>
    <string name="afraidCb">Afraid</string>
    <string name="aggrevatedCb">Aggrevated</string>
    <string name="angryCb">Angry</string>
    <string name="anxiousCb">Anxious</string>
    <string name="calmCb">Calm</string>
    <string name="depressedCb">Depressed</string>
    <string name="energizedCb">Energized</string>
    <string name="grumpyCb">Grumpy</string>
    <string name="hesitantCb">Hesitant</string>
    <string name="impatientCb">Impatient</string>
    <string name="grouchyCb">Grouchy</string>
    <string name="happyCb">Happy</string>
    <string name="distantCb">Distant</string>
    <string name="confidentCb">Confident</string>
    <string name="contentCb">Content</string>
    <string name="discouragedCb">Discouraged</string>
    <string name="fatiguedCb">Fatigued</string>
    <string name="braveCb">Brave</string>
    <string name="submitBtn">Submit</string>
    <string name="addBtn">Add</string>
    <string name="enterMedEt">eg. Zanex, Anti-depressants etc</string>
    <string name="med_task_label">Enter any medication taken today and the amount (ie. number of tablets):</string>
    <string name="enterNumMedEt">1</string>
    <string name="statsDisplayTv">No data to display</string>
    <string name="post_delete_btn">delete post</string>
    <string name="more_info_btn">Information</string>
    <string name="guide_tv">guide to using the app</string>
    <string name="notes_txt">Notes</string>
    <string name="symptoms_txt">Symptoms</string>
    <string name="moods_txt">Moods</string>
    <string name="med_txt">Medication</string>
    <string name="forum_title">Forum</string>
    <string name="stats_title">Statistics</string>
    <string name="info_title">Information</string>
    <string name="menu_home">Feed</string>
    <string name="menu_notifications">My Posts</string>
    <string name="forgotPassTv">forgot password?</string>
    <string name="forgotPassBtn">Reset Password</string>
    <string name="enterEmailPassEt">Enter email...</string>
    <string name="app_login">Login</string>
    <string name="app_reg">Registration</string>
    <string name="val_email">Please enter valid email address</string>
    <string name="val_pass"> Please enter a valid password</string>
    <string name="val_passNum">8 characters</string>



</resources>
