<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

        <TextView
            android:id="@+id/med_task_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/task_Label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/acneTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/acneTv" />

        <SeekBar
            android:id="@+id/acneSeekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:paddingTop="20dp" />


        <TextView
            android:id="@+id/bloatingTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bloatingTv" />

        <SeekBar
            android:id="@+id/bloatingSeekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:paddingTop="20dp" />

        <TextView
            android:id="@+id/crampsTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crampsTv" />

        <SeekBar
            android:id="@+id/crampsSeekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:paddingTop="20dp" />

        <TextView
            android:id="@+id/dizzinessTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dizzinessTv" />

        <SeekBar
            android:id="@+id/dizzinessSeekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:paddingTop="20dp" />

        <TextView
            android:id="@+id/headachesTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/headachesTv" />

        <SeekBar
            android:id="@+id/headacheSeekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:paddingTop="20dp" />

        <TextView
            android:id="@+id/insomniaTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insomniaTv" />

        <SeekBar
            android:id="@+id/insomniaSeekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:paddingTop="20dp" />

        <TextView
            android:id="@+id/spotsTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spotsTv" />

        <SeekBar
            android:id="@+id/spotsSeekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:paddingTop="20dp" />

        <TextView
            android:id="@+id/sweatingTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sweatingTv" />

        <SeekBar
            android:id="@+id/sweatingSeekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:paddingTop="20dp" />

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/submitBtn" />

    </LinearLayout>
</ScrollView>
