<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.louis.prototype.MyDiary$PlaceholderFragment">

    <TextView
        android:id="@+id/med_task_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section_label" />

    <Button
        android:id="@+id/saveNoteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="76dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/button2" />

    <EditText
        android:id="@+id/typeHereEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/med_task_label"
        android:layout_alignRight="@+id/med_task_label"
        android:layout_below="@+id/med_task_label"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/typeHere"
        android:inputType="textMultiLine" />

</RelativeLayout>
